# PIL-EditorGUI

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  visualizador.py
.github/workflows/: python-publish.yml
src/pileditorgui/: editor.py  visualizador.py
