[project]
name = "PIL-EditorGUI"
version = "1.9.4"  # Versão atual do seu projeto
description = "Um editor de imagens simples com suporte a camadas e exportação para código em Python, JavaScript e Lua."
readme = "README.md"
authors = [{ name = "LucasFortes", email = "ofc.rede@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "Pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/LucasDesignerF/PIL-EditorGUI"
"Repository" = "https://github.com/LucasDesignerF/PIL-EditorGUI"
"Bug Tracker" = "https://github.com/LucasDesignerF/PIL-EditorGUI/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pileditorgui"]
